--- a/static/home.css
+++ b/static/home.css
@@ -13,6 +13,17 @@ h2{
   text-align: center;
 
 }
+.container-projects{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.project-img{
+  width: 25%;
+  height: auto;
+  border-radius: 30px;
+  padding: 20px;
+}
 
 .heading{
   font-family: "Montserrat";
@@ -45,7 +56,7 @@ h2{
   padding: 20px;
 
 }
-.mainpic{
+.mainpic-home{
   display:inline-block;
   margin:0px;
   padding: 0px;
