--- a/static/home.css
+++ b/static/home.css
@@ -16,9 +16,12 @@ h2{
 .container-projects{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  width: 100%;
+  height: auto;
+
 }
 .project-img{
+  display: inline;
   width: 25%;
   height: auto;
   border-radius: 30px;
