--- a/static/home.css
+++ b/static/home.css
@@ -21,10 +21,11 @@ h2{
 }
 .container-projects a{
   display: inline;
+  width: 26%;
 }
 .project-img{
   display: inline;
-  width: 25%;
+  width: 70%;
   height: auto;
   border-radius: 30px;
   padding: 20px;
@@ -152,6 +153,9 @@ h2{
   }
   .detail{
     font-size: 2vw;
+  }
+  .project-img{
+    width: 90%;
   }
 }
 
