--- a/static/home.css
+++ b/static/home.css
@@ -1,8 +1,6 @@
 body{
   font-family: "Montserrat";
 }
-div{
-}
 h2{
   display: inline;
   padding-left: -30px;
@@ -23,6 +21,49 @@ button{
 button:hover, button:active{
   background-color: black;
   color: #148a14;
+}
+.team{
+  display: flex;
+  flex-wrap: wrap;
+}
+.exec-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  width: 27%;
+  margin: 10px 15px;
+  display: block;
+}
+.direc-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  width: 27%;
+  margin: 10px 15px;
+  display: block;
+}
+.head-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  width: 27%;
+  margin: 10px 15px;
+  display: block;
+}
+.card-img {
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+}
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card-container {
+  padding: 2px 16px;
+  font-family: "Montserrat";
+  font-size: 2vw;
 }
 .Section{
   text-align: center;
