--- a/static/home.css
+++ b/static/home.css
@@ -22,6 +22,30 @@ button:hover, button:active{
   background-color: black;
   color: #148a14;
 }
+p{
+  font-size: 1vw;
+  padding: 10px;
+  text-align: justify;
+}
+.proj-details{
+  width: 55%;
+  margin: 0px 22.5%;
+}
+.proj-details img{
+  border-radius: 20px;
+}
+.heading2{
+  font-family: "Montserrat";
+  font-size: 20px;
+  width: 70%;
+  text-align: center;
+  border-bottom: solid;
+  border-width: 3px;
+  border-color: grey;
+  border-radius: 5px;
+  padding: 40px 0px;
+  margin: 20px 15%;
+}
 .exec-team{
   display: none;
   flex-wrap: wrap;
@@ -40,7 +64,6 @@ button:hover, button:active{
   border-radius: 5px; /* 5px rounded corners */
   width: 27%;
   margin: 10px;
-
 }
 .direc-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -48,7 +71,6 @@ button:hover, button:active{
   border-radius: 5px; /* 5px rounded corners */
   width: 27%;
   margin: 10px;
-
 }
 .head-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -56,18 +78,14 @@ button:hover, button:active{
   border-radius: 5px; /* 5px rounded corners */
   width: 27%;
   margin: 10px;
-
 }
 .card-img {
   border-radius: 5px 5px 0 0;
   width: 100%;
 }
-/* On mouse-over, add a deeper shadow */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-
-/* Add some padding inside the card container */
 .card-container {
   padding: 2px 16px;
   font-family: "Montserrat";
@@ -75,13 +93,11 @@ button:hover, button:active{
 }
 .Section{
   text-align: center;
-
 }
 .container-projects{
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-
 }
 .container-projects a{
   display: inline;
@@ -260,6 +276,13 @@ button:hover, button:active{
   .nav a{
     width: 100%;
     font-size: 2vw;
+  }
+  p{
+    font-size: 2vw;
+  }
+  .proj-details{
+    width: 100%;
+    margin: 0;
   }
 }
 
