--- a/static/home.css
+++ b/static/home.css
@@ -197,9 +197,9 @@ p{
   float: left;
   display: inline;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 10%;
   margin: 0px;
-  width: 45%;
+  width: 30%;
   text-transform: uppercase;
   text-decoration: none;
   font-size: 1vw;
@@ -282,6 +282,7 @@ p{
   .nav a{
     width: 100%;
     font-size: 2vw;
+    padding: 14px 16px;
   }
   p{
     font-size: 2vw;
